Cache some getRecord work